desenvolvimento header/section1

--- a/index.html
+++ b/index.html
@@ -15,37 +15,49 @@
 
   <div class="container">
 
-    <header class="header">
-      <div class="logo"><a href=""><img src="./img/logo.png" alt=""></a></div>
-      <nav class="navigation font-1-m-txt cor-6">
-        <ul>
-          <li>Home</li>
-          <li>Estratégias</li>
-          <li>Planos</li>
-          <li>Sobre</li>
-          <li>Consultar</li>
-        </ul>
-      </nav>
+    <header class="header-container">
+      <div class="header">
+        <div class="logo"><a href=""><img src="./img/logo.png" alt=""></a></div>
+        <nav class="navigation font-1-m-txt cor-6">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Estratégias</a></li>
+            <li><a href="">Planos</a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Consultar</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <section class="section">
       <div class="grid">
-        <div>
-          <p class="txt-inicial">1# MARKETING DIGITAL</p>
-          <h1>Impulsione seu Negócio com
-            Design|. </h1>
-          <p>Na nossa empresa, oferecemos estratégias personalizadas em tráfego pago, social media, gestão de mídia e mais, para impulsionar o crescimento do seu negócio.</p>
+        <div class="left-section">
+          <div class="mrg-l">
+            <span class="detail-txt"></span>
+            <p class="font-3-m-txt">1# MARKETING DIGITAL</p>
+          </div>
+          <h1 class="font-1-g-h1 mrg-p cor-6">Impulsione seu Negócio com
+            <span class="cor-p0">Design|</span>.
+          </h1>
+          <p class="font-2-g-txt cor-4 mrg-g-txt">Na nossa empresa, oferecemos estratégias personalizadas em tráfego pago, social media, gestão de mídia e mais, para impulsionar o crescimento do seu negócio.</p>
           <div>
             <button>Impulsionar</button>
             <button>Explorar mais</button>
           </div>
         </div>
-        <div></div>
+        <div class="right-section mrg-m">
+          <span class="detalhe-img-right"></span>
+          <img src="./img/img-content-section.png" alt="">
+        </div>
       </div>
-      <div>
+
+    </section>
+    <section class="frist-botton">
+      <div class="botton-frist-section">
+
         +23,000 clientes em mais de 120 países fazendo o uso dessas plataformas e outras mais para fazer seu negócio crescer. Deixe seu gerenciamento digital com O marketing digital.
       </div>
     </section>
-
   </div>
 
 </body>
